--- a/style.css
+++ b/style.css
@@ -34,3 +34,34 @@ ol.breadcrumb {
 .site-primary-footer-wrap[data-section="section-primary-footer-builder"] .ast-builder-grid-row {
     grid-column-gap: 50px;
 }
+
+@media (max-width: 782px) {
+    .ast-container .wp-block-columns .wp-block-column {
+        min-width: 100px;
+        max-width: 100px;
+        margin-left: auto!important;
+        margin-right: auto!important;
+    }
+
+    .ast-container .wp-block-cover .wp-block-columns .wp-block-column,
+    .ast-container .wp-block-columns .wp-block-column.has-background {
+        max-width: 100%;
+        padding-left: .2rem;
+        padding-right: .2rem;
+    }
+
+    .ast-container p,
+    .ast-container .wp-block-columns .wp-block-column.has-background,
+    .ast-container .wp-block-columns .wp-block-column.has-text-color {
+        padding-left: .2rem;
+        padding-right: .2rem;
+    }
+
+    .ast-container .wp-block-columns.is-not-stacked-on-mobile {
+        flex-wrap: wrap!important;
+    }
+
+    .ast-container .wp-block-image.size-full {
+        margin: 0;
+    }
+}
