add a little configurability

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
  Theme Name:   Monsta Chile for Astra
- Description:  Monsta child theme for Astra theme
+ Description:  Monsta child theme for Astra theme. This theme has been replaced with a child for the Twenty-twenty-two theme.
  Author:       Michal Carson
  Template:     astra
  Version:      1.0.0
